js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib2/class2.kt
class Module2Class: Module1Interface {
    fun testFunction1() = 1
}
